--- a/ShopeeProject/ShopeeSite/templates/statistic.html
+++ b/ShopeeProject/ShopeeSite/templates/statistic.html
@@ -9,8 +9,10 @@
 {% csrf_token %}
     <br/>
     : )<br/><br/>
-    <label for='account'>輸入預統計蝦皮店家ID <span class="glyphicon glyphicon-search"></span></label>
-    <input id='account' type='text' name='account'><br/><br/>
+    <label for='ShopID'>Enter the Shopee shop ID <span class="glyphicon glyphicon-search"></span></label>
+    <input id='ShopID' type='text' name='ShopID'><br/><br/>
+    <label for='NumofProducts'>Enter the sequence of the products <span class="glyphicon glyphicon-search"></span></label>
+    <input id='NumofProducts' type='text' name='NumofProducts'><br/><br/>
     <input type='submit' value='submit'>
     <input type='reset' value='reset'>
 </form>
