--- a/ShopeeProject/ShopeeSite/templates/footer.html
+++ b/ShopeeProject/ShopeeSite/templates/footer.html
@@ -1,4 +1,4 @@
 <hr>
 {% load static %}
-<img src="{% static "logo.jpg" %}" width=100>
-<em>SHOPEE <a href='https://shopee.tw/'>https://shopee.tw/</a>. 如有侵權請告知，將立即徹下。</em>
+<img src="https://s3.amazonaws.com/shopeestaticfiles/static/logo.jpg" width=100>
+<em>SHOPEE <a href='https://shopee.tw/'>https://shopee.tw/</a>. Please advise to remove immediately if any infringement caused. </em>
